Flatten list and refactor to use unit tests

--- a/lists/Cargo.toml
+++ b/lists/Cargo.toml
@@ -1,4 +1,4 @@
 [package]
-name = "ninety_nine_library"
-version = "0.1.0"
+name = "lists"
+version = "0.0.1"
 authors = ["Mario Castro <mariocaster@gmail.com>"]
