Determine the prime factors of a given positive integer. Construct a list containing the prime factors and their multiplicity.

--- a/arithmetic/Cargo.toml
+++ b/arithmetic/Cargo.toml
@@ -2,3 +2,6 @@
 name = "arithmetic"
 version = "0.0.1"
 authors = ["Mario Castro <mariocaster@gmail.com>"]
+
+[dependencies]
+lists = { path = "../lists", version = "0.0.1" }
